Date: 11/12/2009
Release Version: 2.2.1

These notes serve as a work log, and will become the release notes for Jargon version 2.2.1

================================================================================================
Requirements

-Jargon depends on Java 1.5+
-Jargon is built using Apache ANT

libraries
---------

-gsi-classes.jar (packaged in lib directory)
-junit-4.7.jar (packaged in lib)

================================================================================================
Features and Changes

This release is a bug-fix release to bring Jargon up-to-date.  Jargon 2.2.1 will incorporate any outstanding
patches that were not committed for the 2.2.0 release, as well as any new issues identified in Jargon 2.2.0

------------
* Upgrade to ANT build
  * Greater parameterization and incorporation of a build.properties control file
  * Clarification of generated targets, moving towards a Maven-defined standard project repository
  * No longer generate Jargon jar files into lib
  * Allow additions of .jar files in lib to be dynamically incorporated into run and compile tasks
  * Moved manifest files out of lib
  * Moved test code out of Jargon.jar, into it's own Jargon-test.jar file
  * Added a JUnit task

-------------
Add of JUnit testing support.

This is being used for internal development, with the intent to make these facilities generally available.
Consider the JUnit testing to be experimental.

-------------
Testing and patches for  Bug 24 -  Inconsistent return of resource on IRODSFile
*return physical resource for IRODSFile.getResource() when it is a File

-------------
Testing and patches for  Bug 31 -  Create IRODS file by URI and do put - null resource causes -78000 IRODS error
*created test cases to capture bug

-------------
Testing and patches for  Bug 32 -   copyTo when dest file is from URI results in -78000 resource not found
*created test cases to capture bug

-------------