@@ -23,7 +23,8 @@ libraries
 ---------
 
 -gsi-classes.jar (packaged in lib directory)
--junit-4.7.jar (packaged in lib)
+-junit-4.7.jar (packaged in lib) - used by unit testing classes, not necessary for Jargon deployment
+-apache commons-exec-1.0.1.jar (packaged in lib directory) - used by unit testing classes, not necessary for Jargon deployment
 
 ================================================================================================
 Features and Changes
@@ -96,7 +97,8 @@ Testing and fix for Bug 37 -  Add AVU allows more than 3 fields
 
 -------------
 Testing and fix (interem) for  Bug 41 -  Exec rule with = sign causes IllegalArgumentException
-Rule processing will be clarifed in upcoming versions, this fixes the specific = sign issue
+Rule processing will be clarifed in upcoming versions, this fixes the specific = sign issue.  This patch also addresses
+Bug 27 -  In IRODSFileSystem, rule execution method always returns a String
 	
 ================================================================================================
 Outstanding Issues
